# terminal_chatgpt

./: .gitignore  TODO.md  pyproject.toml
chatbot/: __main__.py
