[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Alla Barbalat <allabarbalat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
openai = "^1.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
